--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Michael John Buffkin</title>
-  <link type="text/css" rel="stylesheet" href="..\BS4\CSS\bootstrap.css"/>
+  <link type="text/css" rel="stylesheet" href="\BS4\CSS\bootstrap.css"/>
 
 </head>
 <body>
@@ -192,7 +192,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-  <script src="..\BS4\JS\bootstrap.min.js"></script>
+  <script src="\BS4\JS\bootstrap.min.js"></script>
 
 </body>
 </html>
